# datathon

./: .gitignore  0_notebook_principal.ipynb  1_data_ingestion.ipynb  2_variavel_target.ipynb  3_curadoria.ipynb  4_pre_processing.ipynb  5_training.ipynb  6_topic_modeling.ipynb  7_performance.ipynb  README.md  pyproject.toml
reports/business_insights/: bertopic_frequency.csv
reports/topics/: topic_frequency.csv
