[project]
name = "datathon-tech-challenge-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.4",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
    "torch==2.9.0",
    "jupyter>=1.1.1",
    "duckdb>=1.4.4",
    "chardet>=5.2.0",
    "pathlib>=1.0.1",
    "polars>=1.38.1",
    "spacy>=3.8.11",
    "en-core-web-sm",
    "datasets>=4.7.0",
    "evaluate>=0.4.6",
    "transformers[torch]>=5.2.0",
    "scikit-learn>=1.8.0",
    "accelerate>=1.1.0",
]
[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
